// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal ODA enrollment Loopback transformer adds iOS UI elements appropriately when platform is Android and challenge method is loopback 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "enroll.title.oda",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "enroll.explanation.p1",
        },
        "type": "Description",
      },
      {
        "noMargin": true,
        "options": {
          "items": [
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.android.step1",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step1",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step2",
                  },
                  "type": "Description",
                },
                {
                  "noMargin": true,
                  "options": {
                    "content": "<span class="no-translate">https://okta.com</span>",
                  },
                  "type": "Description",
                },
                {
                  "label": "enroll.oda.org.copyLink",
                  "options": {
                    "onClick": [Function],
                    "step": "",
                    "type": "button",
                    "variant": "secondary",
                  },
                  "type": "Button",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step6",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
          ],
          "type": "ol",
        },
        "type": "List",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal ODA enrollment Loopback transformer adds iOS UI elements appropriately when platform is iOS 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "enroll.title.oda",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "enroll.explanation.p1",
        },
        "type": "Description",
      },
      {
        "noMargin": true,
        "options": {
          "items": [
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.mdm.step.copyLink",
                  },
                  "type": "Description",
                },
                {
                  "label": "enroll.mdm.copyLink",
                  "options": {
                    "onClick": [Function],
                    "step": "",
                    "type": "button",
                    "variant": "secondary",
                  },
                  "type": "Button",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.mdm.step.pasteLink",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step3",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step1",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step2",
                  },
                  "type": "Description",
                },
                {
                  "noMargin": true,
                  "options": {
                    "content": "<span class="no-translate">https://okta.com</span>",
                  },
                  "type": "Description",
                },
                {
                  "label": "enroll.oda.org.copyLink",
                  "options": {
                    "onClick": [Function],
                    "step": "",
                    "type": "button",
                    "variant": "secondary",
                  },
                  "type": "Button",
                },
              ],
              "type": "VerticalLayout",
            },
            {
              "elements": [
                {
                  "noMargin": true,
                  "options": {
                    "content": "enroll.oda.step6",
                  },
                  "type": "Description",
                },
              ],
              "type": "VerticalLayout",
            },
          ],
          "type": "ol",
        },
        "type": "List",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
